# ALPR-system-with-YOLO-TrOCR

./: .gitignore  README.md  generate_data.py  main.py  main_test.py  pyproject.toml  trocr_finetune_a100.ipynb
